[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "security-lead-scorer"
version = "0.1.0"
description = "Analyze prospect domains for security vulnerabilities and generate lead scores"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "rangapin" }
]
keywords = ["security", "lead-scoring", "ssl", "headers", "reconnaissance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "tldextract>=5.1.0",
    "dnspython>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.scripts]
security-leads = "security_lead_scorer.main:app"

[project.urls]
Homepage = "https://github.com/rangapin/security-leads"
Repository = "https://github.com/rangapin/security-leads"

[tool.hatch.build.targets.wheel]
packages = ["security_lead_scorer"]
